# SubjectiveAssemblyLocal

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml
.github/: dependabot.yml
.github/workflows/: codeql.yml  deploy-image.yml  node.js.yml  rust.yml
backend/: Cargo.toml  rustfmt.toml
backend/src/: auth.rs  bell.rs  main.rs  patch.rs  post.rs  school.rs  thanks.rs  timetable.rs  update.rs
backend/src/config/: json.rs
backend/src/methods/: mod.rs  patch.rs  post.rs
backend/src/methods/config/: get.rs  mod.rs  put.rs
backend/src/methods/school/: get.rs  mod.rs  put.rs
backend/src/methods/timetable/: delete.rs  get.rs  mod.rs  patch.rs  post.rs
backend/src/school/: json.rs
backend/src/timetable/: json.rs
frontend/: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  backend.tsx  config.json  index.css  main.tsx  timetable.d.ts
frontend/src/components/AddBellButton/: index.tsx
frontend/src/components/Alert/: index.tsx
frontend/src/components/Bell/: index.tsx
frontend/src/components/DayButtons/: index.tsx
frontend/src/utils/: BellTimes.tsx  CursorState.tsx  Notification.tsx  classNames.tsx  hash.tsx  lerp.tsx  useStateRef.tsx
scripts/: start.sh
src/: main.rs
sttkit-frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.cjs  tsconfig.json  vite.config.ts
sttkit-frontend/src/: App.tsx  index.css  main.tsx
sttkit-frontend/src/utils/: Time.tsx
(+19 files in other folders)
