[package]
name = "subjective-assembly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "subjective-assembly"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.77"
bcrypt = "0.15.0"
hmac = "0.12.1"
jwt = "0.16.0"
okapi = { version = "=0.7.0-rc.1" }
rand = "0.8.5"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rocket_okapi = { version = "=0.8.0-rc.3", features = ["swagger"] }
schemars = { version = "0.8.16", features = ["uuid1"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"
uuid = { version = "1.6.1", features = [
    "v4",
    "macro-diagnostics",
    "fast-rng",
    "serde",
] }
